# 42-python-module

./: README.md
module00/: README.md
module00/ex00/: answers.txt  requirements.txt
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata01.py  kata02.py  kata04.py
module00/ex06/: recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: loading.py
module01/: README.md
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py  matrix.py  test.py
module01/ex04/: eval.py  generator.py
module01/ex05/: banking_test3.py  eval.py  the_bank.py
module01/ex06/: the_bank.py
module02/: README.md
module02/ex00/: .gitignore  ft_filter.py  ft_map.py  ft_reduce.py  test.py
module02/ex01/: main.py
module02/ex02/: .gitignore  logger.py
module02/ex03/: .gitignore  csvreader.py
module02/ex04/: .gitignore  README.md  README.txt  build.sh  setup.cfg  setup.py  test.py
module02/ex04/ai42/: progressbar.py
module02/ex04/ai42/logging/: log.py
module02/ex04/my_minipack/: __init__.py  logger.py
module02/ex04/src/my_minipack/: logger.py  progressbar.py
module02/ex05/: TinyStatistician.py
module03/: README.md
module03/ex00/: NumPyCreator.py  test.py
module03/ex01/: ImageProcessor.py  test.py
module03/ex02/: ScrapBooker.py  test.py
module03/ex03/: ColorFilter.py  ImageProcessor.py  test.py
module04/: .gitignore  README.md
(+22 files in other folders)
