[metadata]
name = my_minipack
version = 1.0.0
author = ncolomer
author_email = ncolomer@student.42.fr
description = The greatest package  
url = https://github.com/Glagan/42-python-module/tree/master/module02/ex04
project_urls =
    Bug Tracker = https://github.com/Glagan/42-python-module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
